--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "build:api": "rm -rf .stormkit/api && node --loader ts-node/esm vite.config.api.ts"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.4",
+    "http-status-codes": "^2.2.0",
+    "jose": "^4.14.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
