--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "jose": "^4.14.4",
     "nodemailer": "^6.9.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "squirrelly": "^9.0.0"
   },
   "devDependencies": {
     "@stormkit/serverless": "^1.1.3",
@@ -43,6 +44,7 @@
     "nodemon": "^2.0.22",
     "react-router": "^6.6.2",
     "react-router-dom": "^6.11.0",
+    "sqlite3": "^5.1.6",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "vite": "^4.3.3",
