--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.133",
     "@mui/material": "^5.13.4",
+    "@stormkit/ds": "^1.3.2",
     "http-status-codes": "^2.2.0",
     "jose": "^4.14.4",
     "nodemailer": "^6.9.3",
