--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/lab": "^5.0.0-alpha.133",
     "@mui/material": "^5.13.5",
     "@stormkit/ds": "^1.4.2",
+    "formidable": "^3.5.0",
     "http-status-codes": "^2.2.0",
     "jose": "^4.14.4",
     "nodemailer": "^6.9.3",
@@ -35,6 +36,7 @@
     "@babel/preset-env": "^7.22.5",
     "@stormkit/serverless": "^1.1.4",
     "@types/express": "^4.17.17",
+    "@types/formidable": "^2.0.6",
     "@types/glob": "^8.1.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
